# osage

./: .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt
flask-backend/: Dockerfile  app.py  pyproject.toml  requirements.txt  seed_menu.py  seed_reward.py  wsgi.py
flask-backend/app/: __init__.py  config.py  extensions.py
flask-backend/app/constants/: bank_info.py  order_status.py  roles.py
flask-backend/app/models/: __init__.py  address.py  category.py  feedback.py  menu_item.py  order.py  payment.py  product.py  restaurant.py  reward.py  user.py
flask-backend/app/routes/: auth.py  feedback.py  kitchen.py  menu.py  order.py  reward.py
flask-backend/app/schemas/: auth.py
flask-backend/app/services/: auth.py  order.py
flask-backend/app/utils/: helper.py  permissions.py
flask-backend/migrations/versions/: 0bd8ebd3394d_.py  281331f2759f_init.py  2a4a7598d4ee_.py  3ed722f8cbdf_.py  3efd9ffa7394_.py  48446cefdbe3_.py  5f0b0cfd5509_.py  768a34b5626c_.py  7c72aebd8d4f_.py  9ce90c87305e_.py  af4b523c7239_.py  f4e4f33268c2_.py
flask-backend/seeds/: seed_all.py  seed_menu.py  seed_reward.py
frontend/: env.local  next.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CartPage.tsx  FeedbackPage.tsx  Footer.tsx  LoginForm.tsx  MenuCard.tsx  MenuPage.tsx  Navigation.tsx  PaymentPage.tsx  RegisterForm.tsx
frontend/constants/: api.ts  pricing.ts  tax.ts
frontend/hooks/: format-price.ts  format-time.ts  use-auth.ts
frontend/lib/: api.ts
(+36 files in other folders)
