[tool.poetry]
name = "osage-backend"
version = "0.1.0"
description = "Flask backend for Osage"
authors = ["Sage myuniversityera@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
gunicorn = "^21.2.0"
# add others here

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
