[tool.poetry]
name = "osage-backend"
version = "0.1.0"
description = "Flask backend for Osage"
authors = ["Sage"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

Flask = "3.1.2"
Flask-Bcrypt = "1.0.1"
flask-cors = "6.0.2"
Flask-JWT-Extended = "4.7.1"
Flask-Login = "0.6.3"
Flask-Migrate = "4.1.0"
Flask-SocketIO = "5.6.0"
Flask-SQLAlchemy = "3.1.1"
Flask-WTF = "1.2.2"

SQLAlchemy = "2.0.46"
alembic = "1.18.1"
psycopg2-binary = "2.9.11"

gunicorn = "23.0.0"
eventlet = "0.40.4"
greenlet = "3.3.0"

python-dotenv = "1.2.1"
bcrypt = "5.0.0"
PyJWT = "2.10.1"
dnspython = "2.8.0"

Werkzeug = "3.1.5"
Jinja2 = "3.1.6"
MarkupSafe = "3.0.3"
itsdangerous = "2.2.0"
click = "8.3.1"
blinker = "1.9.0"
packaging = "26.0"
typing_extensions = "4.15.0"

python-socketio = "5.16.0"
python-engineio = "4.13.0"
simple-websocket = "1.1.0"
wsproto = "1.3.2"
h11 = "0.16.0"

colorama = "0.4.6"
bidict = "0.23.1"
Mako = "1.3.10"
WTForms = "3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
